err/wiki-xmlrpc-extensions.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Wiki_XMLRPC_Extensions'...
Compiling './lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/ForkWikiContent.py'...
***   File "./lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/ForkWikiContent.py", line 63
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/ListPages.py'...
***   File "./lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/ListPages.py", line 38
    print get_anonymous_readable_pages(args, OPTS)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/ReceiveFiles.py'...
***   File "./lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/ReceiveFiles.py", line 37
    print xmlrpc_init.receive_files(pagename=args.pagename, path=args.path, file_filter=args.filter)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/SendFiles.py'...
***   File "./lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/SendFiles.py", line 41
    print args.pagename
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/__init__.py'...
***   File "./lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/__init__.py", line 75
    except xmlrpclib.ProtocolError, err:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/examples'...
Compiling './lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/examples/ExampleWiki.py'...
***   File "./lib/python3.5/site-packages/Wiki_XMLRPC_Extensions/examples/ExampleWiki.py", line 128
    print setup_instrument_pages_for_a_wiki(args, password)
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wiki_xmlrpc_extensions-0.2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
